feat: add stop schedule
