# docs/swagger.json
@@ -162,6 +162,38 @@
                 }
             }
         },
+        "/api/stops/{stop_number}/schedule": {
+            "get": {
+                "description": "Provide the schedule for a stop",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bus"
+                ],
+                "summary": "Get the schedule for a stop",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Stop Number",
+                        "name": "stop_number",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.StopSchedule"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/{provider}/{uuid}": {
             "get": {
                 "description": "Provide a user by its UUID for a specific provider",
@@ -368,6 +400,27 @@
                 "ProviderTypeTelegram"
             ]
         },
+        "api.Schedule": {
+            "type": "object",
+            "properties": {
+                "line": {
+                    "description": "Line is the line that the schedule is for",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/api.Line"
+                        }
+                    ]
+                },
+                "route": {
+                    "description": "Route is the route that the schedule is for",
+                    "type": "string"
+                },
+                "time": {
+                    "description": "Time is the time of the schedule",
+                    "type": "integer"
+                }
+            }
+        },
         "api.Stop": {
             "type": "object",
             "properties": {
@@ -402,6 +455,39 @@
                     "type": "integer"
                 }
             }
+        },
+        "api.StopSchedule": {
+            "type": "object",
+            "properties": {
+                "schedules": {
+                    "description": "Schedules is a list of the schedules for the stop",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.Schedule"
+                    }
+                },
+                "stop": {
+                    "description": "Stop is the stop that the schedule is for",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/api.Stop"
+                        }
+                    ]
+                }
+            }
         }
-    }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "\"Type 'Bearer' followed by a space and then your token.\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    },
+    "security": [
+        {
+            "BearerAuth": []
+        }
+    ]
 }
